--- a/apps/classic/i18n/locales/ja.json
+++ b/apps/classic/i18n/locales/ja.json
@@ -94,10 +94,9 @@
   "desc.autoRemoveNotes": "セルに数字が配置された時、その数字を全てのメモから自動的に削除します",
 
   "howToPlay.title": "遊び方",
-  "howToPlay.slide1": "グリッドは不規則な形のエリアに分割されています。これらのエリアは「ケージ」と呼ばれます。",
-  "howToPlay.slide2": "ケージ内のセルの数の合計は、左上隅に表示されている数と一致する必要があります。",
-  "howToPlay.slide3": "すべてのブロック、行、列の数字の合計は常に45になります。引き算を使って解を導きましょう。",
-  "howToPlay.slide4": "レベルを解けない？ヒントを試してみましょう！難しい部分で行き詰まったときに役立ちます。",
+  "howToPlay.slide1": "数独パズルは、いくつかの数字がすでに配置されたグリッドから始まります。各数字が1から9まで、9つの行・列・ブロックにそれぞれ1回ずつ現れるようにマスを埋めていきます。グリッドを見て、各マスに入りそうな数字を考えましょう。",
+  "howToPlay.slide2": "マスを選択してから、数字をタップして入力します",
+  "howToPlay.slide3": "メモモードをオンにすると、メモの追加・削除ができます",
   "common.skip": "スキップ",
 
   "rateApp": "アプリを評価する",
