--- a/apps/classic/i18n/locales/ja.json
+++ b/apps/classic/i18n/locales/ja.json
@@ -82,6 +82,7 @@
   "setting.highlightIdenticalNumbers": "同じ数字をハイライト",
   "setting.hideUsedNumbers": "使用済みの数字を非表示",
   "setting.autoRemoveNotes": "メモを自動削除",
+  "setting.smartMemo": "スマートメモフィルタリング",
 
   "desc.statisticsMsg": "レベルを解けた人数に関するメッセージを表示",
   "desc.numberFirst": "数字を長押しして固定し、複数セルに使用",
@@ -92,6 +93,7 @@
   "desc.highlightIdenticalNumbers": "数字が入ったセルを選ぶと、その数字と同じものを全体にハイライトします",
   "desc.hideUsedNumbers": "すでに9つのセルに配置された数字を非表示にします",
   "desc.autoRemoveNotes": "セルに数字が配置された時、その数字を全てのメモから自動的に削除します",
+  "desc.smartMemo": "現在の盤面に基づいて有効な数字のみをメモとして表示します",
 
   "howToPlay.title": "遊び方",
   "howToPlay.slide1": "数独パズルは、いくつかの数字がすでに配置されたグリッドから始まります。各数字が1から9まで、9つの行・列・ブロックにそれぞれ1回ずつ現れるようにマスを埋めていきます。グリッドを見て、各マスに入りそうな数字を考えましょう。",
