--- a/apps/classic/i18n/locales/vi.json
+++ b/apps/classic/i18n/locales/vi.json
@@ -82,6 +82,7 @@
   "setting.highlightIdenticalNumbers": "Tô sáng số giống nhau",
   "setting.hideUsedNumbers": "Ẩn số đã dùng",
   "setting.autoRemoveNotes": "Tự xoá ghi chú",
+  "setting.smartMemo": "Lọc ghi chú thông minh",
 
   "desc.statisticsMsg": "Hiển thị thông báo về số người đã giải được một cấp độ",
   "desc.numberFirst": "Giữ một số bằng cách nhấn giữ, sau đó sử dụng cho nhiều ô",
@@ -92,6 +93,7 @@
   "desc.highlightIdenticalNumbers": "Khi chọn một ô có số, tô sáng tất cả số giống nhau trong bảng",
   "desc.hideUsedNumbers": "Ẩn các số đã được đặt ở đủ 9 ô khác nhau",
   "desc.autoRemoveNotes": "Tự động xoá số khỏi ghi chú khi được đặt vào ô",
+  "desc.smartMemo": "Chỉ hiển thị các số ghi chú hợp lệ trong ô đang chọn dựa trên bảng hiện tại",
 
   "howToPlay.title": "Cách chơi",
   "howToPlay.slide1": "Một trò chơi sudoku bắt đầu với một lưới ô trong đó một số con số đã được điền sẵn. Trò chơi hoàn thành khi mỗi số từ 1 đến 9 chỉ xuất hiện một lần trong mỗi hàng, cột và khối 3x3. Hãy quan sát lưới để tìm ra con số phù hợp với từng ô.",
