Increment version codes to 9 for both classic and killer apps, implement WhatsNew component for version update notifications, and enhance localization files with new "got it" messages. Update SettingsService for version management and add WhatsNew entries for both apps.

--- a/apps/classic/i18n/locales/vi.json
+++ b/apps/classic/i18n/locales/vi.json
@@ -192,5 +192,7 @@
   "playerNotes_highlights_bestPerformance": "Tỷ lệ thắng cao nhất.",
   "playerNotes_highlights_fastest": "Thời gian trung bình nhanh nhất.",
   "playerNotes_highlights_mostGames": "Số ván chơi nhiều nhất.",
-  "playerNotes_highlights_allNotCompleted": "Chưa hoàn thành ván nào."
+  "playerNotes_highlights_allNotCompleted": "Chưa hoàn thành ván nào.",
+
+  "gotIt": "Đã hiểu"
 }
