--- a/apps/classic/i18n/locales/en.json
+++ b/apps/classic/i18n/locales/en.json
@@ -192,5 +192,7 @@
   "playerNotes_highlights_bestPerformance": "Highest win rate.",
   "playerNotes_highlights_fastest": "Fastest average time.",
   "playerNotes_highlights_mostGames": "Most games played.",
-  "playerNotes_highlights_allNotCompleted": "Hasn't finished any game."
+  "playerNotes_highlights_allNotCompleted": "Hasn't finished any game.",
+
+  "gotIt": "Got it"
 }
