Update version numbers for classic and killer apps to reflect new features, enhance WhatsNew component for better version update notifications, and improve localization with new entries. Refactor theme styles for consistency and integrate WhatsNew functionality in MainScreen components.

--- a/apps/classic/i18n/locales/en.json
+++ b/apps/classic/i18n/locales/en.json
@@ -194,5 +194,6 @@
   "playerNotes_highlights_mostGames": "Most games played.",
   "playerNotes_highlights_allNotCompleted": "Hasn't finished any game.",
 
-  "gotIt": "Got it"
+  "whatsNew.title": "What's New",
+  "common.ok": "Got it"
 }
