--- a/apps/killer/src/i18n/locales/ja.json
+++ b/apps/killer/src/i18n/locales/ja.json
@@ -191,5 +191,6 @@
   "playerNotes_highlights_mostGames": "最も多くのゲームをプレイ。",
   "playerNotes_highlights_allNotCompleted": "どのゲームも完了していません。",
 
-  "gotIt": "わかった"
+  "whatsNew.title": "新機能",
+  "common.ok": "わかった"
 }
