--- a/apps/killer/src/i18n/locales/vi.json
+++ b/apps/killer/src/i18n/locales/vi.json
@@ -191,5 +191,6 @@
   "playerNotes_highlights_mostGames": "Số ván chơi nhiều nhất.",
   "playerNotes_highlights_allNotCompleted": "Chưa hoàn thành ván nào.",
 
-  "gotIt": "Đã hiểu"
+  "whatsNew.title": "Có gì mới",
+  "common.ok": "Đã hiểu"
 }
