Enhance game management features across Classic and Killer apps
- Introduced BOARD_TYPE constants for better game state handling in BoardScreen and MainScreen.
- Implemented functionality to resume unfinished games, improving user experience.
- Updated game log entry structure to GameLogEntryV3, adding support for initial and solved boards.
- Refactored various components to utilize new game log structure and ensure consistency in game state management.
- Enhanced theme styles to include unfinished game button for better visual feedback.

--- a/apps/classic/i18n/locales/en.json
+++ b/apps/classic/i18n/locales/en.json
@@ -51,6 +51,7 @@
   "welcomeTitle": "🎯\nWelcome to\n{{appName}}",
   "welcomeUser": "👋 {{playerName}}",
   "continueGame": "Continue Game",
+  "resumeUnfinishedGame": "Resume Unfinished Game",
   "newGame": "New Game",
   "clearStorage": "Clear Storage",
 
